# ofc

./: .env.example  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: cddc6c86ba6b_initial_tables.py  f650eb806474_description.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: batches.py  school_branches.py  schools.py  students.py  users.py
app/core/: config.py  db.py  error_codes.py  exception_handlers.py  exceptions.py  logging.py  password.py  responses.py  security.py
app/models/: __init__.py  base.py  school.py  school_branch.py  student.py  users.py
app/repositories/: __init__.py  base_repository.py  school_branch_repository.py  school_repository.py  student_repository.py  user_repository.py
app/schemas/: __init__.py  base.py  school.py  school_branch.py  student.py  user.py
app/services/: base_service.py  batch_service.py  school.py  school_branch.py  student.py  user.py  utils.py
docs/: configuration_strategy.md
migrations/: env.py
migrations/versions/: bf53902afbbf_create_core_tables.py
