[project]
name = "my-microservice"
version = "0.1.0"
description = "A FastAPI microservice template."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.28.0",
    "loguru>=0.7.0",
    "email-validator>=2.3.0",
    "bcrypt>=5.0.0",
    "uuid7>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.24.1",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
